fix body, #root spacing

--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,13 @@
   src: url("../../assets/fonts/AvenirNextLTPro-Demi.otf") format("opentype"), url("../../assets/fonts/Alternative files/AvenirNextLTProDemi.ttf") format("truetype");
   font-weight: 600;
 }
-body {
+body, #root {
   margin: 0;
   padding: 0;
   top: 0;
   left: 0;
   line-height: 100%;
   width: 100%;
-  top: -0.5rem;
-  left: -0.5rem;
 }
 
 html {
