--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,11 +8,12 @@ header {
 }
 
 header {
-    background-color: yellow;
+    background-color: pink;
     position: fixed;
     width: 100%;
     top: 0;
     z-index: 3;
+
 }
 
 .header {
